# test-nginx

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
product/: forms.py  models.py  serializers.py  tests.py  urls.py  v1.py  views.py  views_django.py
product/migrations/: 0001_initial.py  0002_auto_20210615_1305.py  0003_auto_20210615_1657.py  0004_alter_product_category.py
product/templates/: base.html  category.html  form.html  home.html  index.html  product.html
product/tests/: conftest.py  test_model_product.py  test_valid_category_serializer.py  test_view_category.py
proxy/: Dockerfile  default.conf
scripts/: entrypoint.sh
setup/: settings.py  urls.py
setup/static/css/: style.css
