[tool.poetry]
name = "ts-product_django-temp"
version = "0.1.0"
description = ""
authors = ["JuniorCardoso <tarcisio.cardoso@olist.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
psycopg2-binary = "^2.8.6"
pytest = "^6.2.4"
pytest-django = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
